// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When there is a product renders correctly 1`] = `
<div
  caption={
    <Unknown
      difficulty="easy"
    />
  }
  confirmLeave={true}
  currentUser={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  leftIcon={<Unknown />}
  location="foo location"
>
  Layout - 
  <h5
    className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-alignCenter-24"
  >
    foo title
  </h5>
  <div
    product={
      Object {
        "image": "https://foo.image",
        "title": "foo title",
      }
    }
  >
    ProductImage - 
  </div>
  <a
    href="https://www.verifyspot.net/cl.php?id=c6ab41e68cc1dd56233aa14ec2ed9859"
    rel="noopener noreferrer"
    style={
      Object {
        "textDecoration": "none",
      }
    }
    target="_blank"
  >
    <button
      className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-contained-48 MuiButton-raised-51 MuiButton-fullWidth-62"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "#76fc03",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-38"
      >
        Play Again
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </button>
  </a>
</div>
`;

exports[`When there is no product renders correctly 1`] = `
<div
  caption={
    <Unknown
      difficulty="easy"
    />
  }
  confirmLeave={true}
  currentUser={
    Object {
      "id": 1,
      "name": "foo",
    }
  }
  leftIcon={<Unknown />}
  location="foo location"
>
  Layout - 
  <h5
    className="MuiTypography-root-1 MuiTypography-h5-17 MuiTypography-alignCenter-24"
  >
    Looks like you've already played this game, Click the "Play Again" below to Download Another App and play a new game
  </h5>
  <div
    product={
      Object {
        "image": "cardi_placeholder.png",
      }
    }
  >
    ProductImage - 
  </div>
  <a
    href="https://www.verifyspot.net/cl.php?id=c6ab41e68cc1dd56233aa14ec2ed9859"
    rel="noopener noreferrer"
    style={
      Object {
        "textDecoration": "none",
      }
    }
    target="_blank"
  >
    <button
      className="MuiButtonBase-root-63 MuiButton-root-37 MuiButton-contained-48 MuiButton-raised-51 MuiButton-fullWidth-62"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "backgroundColor": "#76fc03",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-38"
      >
        Play Again
      </span>
      <span
        className="MuiTouchRipple-root-66"
      />
    </button>
  </a>
</div>
`;
